# BACKEND

./: .gitignore  .pre-commit-config.yaml  AUDIT_FINDINGS.md  MCP_2025_COMPLIANCE.md  MCP_DYNAMIC_CONFIG_SUMMARY.md  MCP_IMPLEMENTATION_COMPLETE.md  PRECOMMIT_SETUP.md  PROJECT_OVERVIEW.md  PROJECT_RULES.md  README.md  STATUS.md  config.yaml  fix_stream_utils.py  implementation.md  pyproject.toml  runtime_config.yaml  switch_provider.py  test_client.py  test_frontend_protocol.py  test_multi_provider.py  test_proper_protocol.py  test_ws_connection.py
examples/: external_mcp_integration.py  mcp2025_client_test.py  mcp2025_compliance_test.py  mcp_self_config_demo.py  mcp_standard_client_test.py  mcp_websocket_integration.py  provider_switching_demo.py  simple_mcp_demo.py  test_router_actions.py  websocket_client.py
scripts/: lint.sh  start_dev.sh
src/: main.py
src/adapters/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  openai_adapter.py  openrouter_adapter.py  smart_home_functions.py  tool_translator.py
src/common/: __init__.py  config.py  logging.py  models.py  runtime_config.py  stream_utils.py
src/gateway/: __init__.py  connection_manager.py  media_handler.py  websocket.py
src/mcp/: __init__.py  connection_manager.py  jsonrpc.py  mcp2025_server.py  mcp_server.py  parameter_schemas.py  self_config_service.py  stdio_server.py  tool_registry.py
src/mcp/tools/: __init__.py  ai_config_tool.py  list_models_tool.py  parameter_info_tool.py  reset_config_tool.py  show_config_tool.py  switch_provider_tool.py
src/mcp/transports/: __init__.py  stdio.py
src/router/: __init__.py  message_types.py  request_router.py
static/: index.html
tests/: gateway_test.py  test_config.py  test_gateway.py  test_integration.py  test_mcp2025_compliance.py  test_models.py  test_router.py
